--- a/Sube2.HelloMvc/Views/Student/AddStudent.cshtml
+++ b/Sube2.HelloMvc/Views/Student/AddStudent.cshtml
@@ -1,17 +1,47 @@
 ﻿@model Ogrenci
+
 @{
     ViewData["Title"] = "AddStudent";
 }
 
-<h1>Öğrenci Ekleme İşlemi</h1>
+<!DOCTYPE html>
+<html lang="tr">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>@ViewData["Title"]</title>
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+</head>
+<body>
+    <div class="container my-5">
+        <div class="card">
+            <div class="card-header bg-primary text-danger">
+                <h2 class="mb-0">Öğrenci Ekleme İşlemi</h2>
+            </div>
+            <div class="card-body">
+                <form asp-action="AddStudent" asp-controller="Student" method="post">
+                    <div class="form-group">
+                        <label for="Ad">Ad</label>
+                        <input asp-for="Ad" class="form-control" id="Ad" />
+                    </div>
+                    <div class="form-group">
+                        <label for="Soyad">Soyad</label>
+                        <input asp-for="Soyad" class="form-control" id="Soyad" />
+                    </div>
+                    <div class="form-group">
+                        <label for="Numara">Numara</label>
+                        <input asp-for="Numara" class="form-control" id="Numara" />
+                    </div>
+                    <div class="form-group text-center">
+                        <input type="submit" value="Kaydet" class="btn btn-primary btn-lg" />
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
 
-
-<form asp-action="AddStudent" asp-controller="Student" method="post">
-    <label asp-for="Ad"></label>
-    <input asp-for="Ad" />
-    <label>Soyad:</label>
-    <input asp-for="Soyad" />
-    <label>Numara</label>
-    <input asp-for="Numara" />
-    <input type="submit" value="Kaydet" />
-</form>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+</body>
+</html>
