--- a/Sube2.HelloMvc/Views/Student/AddDersForOgrenci.cshtml
+++ b/Sube2.HelloMvc/Views/Student/AddDersForOgrenci.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<MvcOdevIntProgrmaciligi.Models.Ders>
+﻿@model IEnumerable<Sube2.HelloMvc.Models.Ders>
 @{
     ViewData["Title"] = "Öğrenci İçin Ders Ekle";
     var studentId = ViewBag.StudentId;
